<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_button"
    android:backgroundTint="@color/black"
    android:backgroundTintMode="screen"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/calculator"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aakash_1by19ai002"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"
        android:hint="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b7"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:backgroundTint="@null"/>

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/b8"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/_8" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/b9"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/_9" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/bDiv"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/div" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b4"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/_4" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/b5"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/_5" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/b6"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/_6" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/bMul"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/mul" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b1"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/_1" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/b2"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/_2" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/b3"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/_3" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/bSub"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/sub" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bDot"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/dot" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/b0"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/_0" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/bEq"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/equal" />

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/bAdd"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bCle"
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:text="@string/c" />

    </LinearLayout>

</LinearLayout>